# hello-world

./: .gitignore  CMakeLists.txt  LICENSE  README
App/: CMakeLists.txt  Main.cpp  app.qml
App/Android/PackageSource/Qt5/: AndroidManifest.xml
App/Android/PackageSource/Qt6/: AndroidManifest.xml
App/Android/PackageSource/Qt6/res/drawable/: splashscreen.xml
App/Apple/: MyAppSplashScreen.storyboard
App/Apple/iOS/: AppIcon.icns
App/Apple/macOS/: AppIcon.icns
CMake/: Cute.cmake  Cute.toolchain.cmake  SplashScreen.storyboard  android_deployment_settings.json.in  iOSAppInfo.plist.in
SharedLibrary/: CMakeLists.txt  HelloText.cpp  HelloText.h  HelloTextGlobals.h
StaticLibrary/: CMakeLists.txt  HelloTextInternal.cpp  HelloTextInternal.h
